Add brownie page completed and link

--- a/recipes/bruschetta.html
+++ b/recipes/bruschetta.html
@@ -32,7 +32,7 @@
         <ol>
             <li>In a large bowl, mix the onions, tomatoes, garlic and basil, taking care not to mash or break up the
                 tomatoes too much. Add the balsamic vinegar and extra virgin olive oil. Add salt and pepper to taste. 
-                Mix again. Cover and chill for at least an hour. This will allow the flavours to soak and blend together.</li>            </li>
+                Mix again. Cover and chill for at least an hour. This will allow the flavours to soak and blend together.</li>
 
             <li>Slice the baguette loaf diagonally into 12 thick slicesf and lightly toast them until they are light
                 brown on both sides. Serve the mixture on the warm slices of bread. If you prefer the mixture at room 
