--- a/recipes/bruschetta.html
+++ b/recipes/bruschetta.html
@@ -9,7 +9,7 @@
         <img src="../images/bruschetta.webp" alt="bruschetta picture" height="400" width="440">
         
         <h2>Description</h2>
-        <p>Make our simple totmato bruschetta as a classic Italin starter. Ideal for a summer gathering with friends,
+        <p>Make our simple tomato bruschetta as a classic Italian starter. Ideal for a summer gathering with friends,
             this easy dish is fresh, tasty and full of flavour.</p>
         
         <p>Takes 15 mins to prepare and 5 mins to cook</p>
@@ -34,7 +34,7 @@
                 tomatoes too much. Add the balsamic vinegar and extra virgin olive oil. Add salt and pepper to taste. 
                 Mix again. Cover and chill for at least an hour. This will allow the flavours to soak and blend together.</li>
 
-            <li>Slice the baguette loaf diagonally into 12 thick slicesf and lightly toast them until they are light
+            <li>Slice the baguette loaf diagonally into 12 thick slices and lightly toast them until they are light
                 brown on both sides. Serve the mixture on the warm slices of bread. If you prefer the mixture at room 
                 temperature, remove from the fridge half an hour before serving.</li>
         </ol>
